xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__if_with_let_true.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"if (1) then (let $x := 2 return $x) else (let $x := 3 return $x)\")"
---
Ok(
    One(
        Atomic(
            Integer(
                Integer,
                2,
            ),
        ),
    ),
)
