xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__inline_function_call_with_let.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"function($x, $y) { $x + $y }(let $a := 1 return $a, let $b := 2 return $b)\")"
---
Ok(
    One(
        Atomic(
            Integer(
                Integer,
                3,
            ),
        ),
    ),
)
