xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__inline_function_with_args_placeholdered.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"function($x, $y) { $x - $y } ( ?, 3 ) (5)\")"
---
Ok(
    Item(
        Atomic(
            Integer(
                2,
            ),
        ),
    ),
)
