xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__inline_function_with_single_arg.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"function($x) { $x + 5 } (3)\")"
---
Ok(
    One(
        Atomic(
            Integer(
                8,
            ),
        ),
    ),
)
