xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__inline_function_without_args.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"function() { 5 } ()\")"
---
Ok(
    Item(
        Atomic(
            Integer(
                5,
            ),
        ),
    ),
)
