xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__instance_of_node.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/></doc>\"#, \"doc/a instance of element(a)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
