xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__instance_of_one.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 instance of xs:integer\")"
---
Ok(
    One(
        Atomic(
            Boolean(
                true,
            ),
        ),
    ),
)
